[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://premap.tscn" type="PackedScene" id=3]
[ext_resource path="res://startgame.png" type="Texture" id=4]
[ext_resource path="res://Player_vision.gd" type="Script" id=5]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1_vision" type="Node2D" parent="." groups=["player1"]]
script = ExtResource( 5 )

[node name="VBoxContainer" parent="Player1_vision" groups=["player1"] instance=ExtResource( 6 )]
modulate = Color( 0.843137, 1, 0.745098, 1 )

[node name="Shots_map" parent="Player1_vision" groups=["1", "map", "shots"] instance=ExtResource( 3 )]
visible = false
modulate = Color( 1, 0.839216, 0.839216, 1 )

[node name="Ships_map" parent="Player1_vision" groups=["map", "ships"] instance=ExtResource( 3 )]

[node name="Player2_vision" type="Node2D" parent="." groups=["player2"]]
script = ExtResource( 5 )

[node name="VBoxContainer" parent="Player2_vision" groups=["player2"] instance=ExtResource( 6 )]
modulate = Color( 1, 0.972549, 0.701961, 1 )

[node name="Shots_map" parent="Player2_vision" groups=["2", "map", "shots"] instance=ExtResource( 3 )]
modulate = Color( 1, 0.839216, 0.839216, 1 )

[node name="Ships_map" parent="Player2_vision" groups=["map", "ships"] instance=ExtResource( 3 )]

[node name="label_turn" type="Label" parent="."]
margin_left = 600.0
margin_top = 550.0
margin_right = 1000.0
margin_bottom = 600.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="TextureButton" parent="."]
margin_left = 175.0
margin_top = 260.0
margin_right = 825.0
margin_bottom = 340.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="switch_turn_signal" from="." to="." method="_on_Main_switch_turn_signal"]
[connection signal="ship_on_map_destroyed" from="Player1_vision" to="." method="_on_Player1_vision_ship_on_map_destroyed"]
[connection signal="shot" from="Player1_vision/Shots_map" to="." method="_on_Shots_map_shot"]
[connection signal="ship_on_map_destroyed" from="Player2_vision" to="." method="_on_Player2_vision_ship_on_map_destroyed"]
[connection signal="shot" from="Player2_vision/Shots_map" to="." method="_on_Shots_map_shot"]
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
